<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presenter.features.main.view.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detailBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Pokeapi.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detailToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/detail_title"
            app:popupTheme="@style/Theme.Pokeapi.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/detailSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailBarLayout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/detailHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/detailPokeImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/detailPokeFavorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:visibility="invisible"
                            app:srcCompat="@drawable/ic_favorite_off"
                            app:tint="@color/colorSecondaryDark"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/detailPokeOrder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="4dp"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:textColor="@color/colorSecondaryDark"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintEnd_toStartOf="@id/detailPokeFavorite"
                            app:layout_constraintTop_toBottomOf="@id/detailPokeName"
                            tools:text="#456" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/detailPokeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:textAllCaps="true"
                            android:textColor="@color/colorSecondary"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintEnd_toStartOf="@id/detailPokeFavorite"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Pikachu" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/detailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/detailHeader">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detailWeightData"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAllCaps="true"
                                android:textStyle="bold"
                                android:textColor="@color/colorSecondaryDark"
                                tools:text="12Kg" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detailWeightLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/detail_weight_label"
                                android:textColor="@color/colorSecondary"
                                android:textAllCaps="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detailHeightData"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAllCaps="true"
                                android:textStyle="bold"
                                android:textColor="@color/colorSecondaryDark"
                                tools:text="0,4m" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detailHeightLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/detail_height_label"
                                android:textColor="@color/colorSecondary"
                                android:textAllCaps="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detailExperienceData"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textAllCaps="true"
                                android:textStyle="bold"
                                android:textColor="@color/colorSecondaryDark"
                                tools:text="569" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detailExperienceLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/detail_experience_label"
                                android:textColor="@color/colorSecondary"
                                android:textAllCaps="true" />
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/detailTypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/detailInfo">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/detail_types_label"
                            android:textColor="@color/colorSecondary"
                            android:textAllCaps="true" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/detailTypeList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/detailAbilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/detailTypes">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/detail_abilities_label"
                            android:textColor="@color/colorSecondary"
                            android:textAllCaps="true" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/detailAbilitiesLists"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>



                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/detailMoves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/detailAbilities">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/detail_moves_label"
                            android:textColor="@color/colorSecondary"
                            android:textAllCaps="true" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/detailMoveLists"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>